docs/7.52/md/abenst_tt_read_write.md
---
title: "Syntax"
description: |
  <tt:read-write var='variable' type='type' length='len' decimals='dec' map='...' minLengthmaxLength='len' xsd-type... /> Effect The command tt:read-write is a short form of the following two statements: <tt:read var='variable' type='type' len
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_read_write.htm"
abapFile: "abenst_tt_read_write.htm"
keywords: ["do", "if", "try", "data", "abenst", "read", "write"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml.htm) →  [Transformations for XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml_trafos.htm) →  [ST - Simple Transformations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_st.htm) →  [ST - Serialization and Deserialization](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_serial_deserial.htm) →  [ST - Reading and Writing Variables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_variable_transformations.htm) → 

ST - tt:read-write, Read or Write Variables

Syntax

<tt:read-write var="variable" *\[*type="type" *\[*length="len"*\]*
                                           *\[*decimals="dec"*\]**\]*
                              *\[*map="..."*\]*
                              *\[*minLength*|*maxLength="len"*\]*
                              *\[*xsd-type...*\]* />

Effect

The command tt:read-write is a short form of the following two statements:

<tt:read var="variable" *\[*type="type" *\[*length="len"*\]*
                                     *\[*decimals="dec"*\]**\]*
                        *\[*map="..."*\]*
                        *\[*minLength*|*maxLength="len"*\]*
                        *\[*xsd-type...*\]* />

<tt:write var="variable" *\[*map="..."*\]*
                         *\[*minLength*|*maxLength="len"*\]*
                         *\[*xsd-type...*\]* />

Specifying tt:read-write has the same effect as the statements [tt:read](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_read.htm) and [tt:read](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_read.htm) specified one directly after the other.

The attribute type and the attributes length and decimals specified using this attribute are used by tt:read only. As with tt:read, the attribute length can only be specified together with type.

Example

Serialization and Deserialization Using a Variable In serializations, the variable VARI is assigned the values of the data object bound to ROOT and is written to XML using read-write. In deserializations, the value of the variable is read from XML and assigned to the data object bound to ROOT.

<tt:transform
  xmlns:tt="http://www.sap.com/transformation-templates">
  <tt:root name="ROOT"/>
  <tt:variable name="VARI"/>
  <tt:template>
    <tt:assign ref="ROOT" to-var="VARI"/>
    <X>
      <tt:read-write var="VARI" type="STRING"
                                minLength="10"/>
    </X>
    <tt:assign to-ref="ROOT" var="VARI"/>
  </tt:template>
</tt:transform>

The following ABAP program can call the transformation:

DATA  str TYPE string.
DATA xstr TYPE xstring.
CALL TRANSFORMATION kellerh\_test
     SOURCE root = string\`abcde\`
     RESULT XML xstr.
cl\_abap\_browser=>show\_xml( xml\_xstring = xstr ).
CALL TRANSFORMATION kellerh\_test
     SOURCE XML xstr
     RESULT root = str.

The result of the serialization is:

<X>abcde     </X>

The transformation is not [symmetrical](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_symmetry.htm), due to [minLength](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_length.htm). After deserialization, the string str has at least 10 places.